test/fail/unop-t.rnp
~true;
---
TypeError: ~ expected number but got boolean
fail/unop-t.rnp:1:2
> 1 | ~true;
    |  ^^^^ ~ expected number but got boolean
  2 | 
